NAS-2374: Added java_home to windows start script generation and also converted it into some less constant hellish.